--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="x-icon" href="weather-image.jpeg">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <!-- https://api.openweathermap.org/data/2.5/weather?q=germany%20&appid=6c098da65739010a440638a377c9cc85&units=metric -->
